tests/enum_into/compile_fail/container/derive_on_struct.rs
use enum_convert::EnumInto;

#[derive(EnumInto)] // Should only work on enums
#[enum_into(Target)]
struct Source {
    field: i32,
}

enum Target {
    Unit,
}

fn main() {}
